<resources>
    <string name="app_name">FoodOnWay</string>
    <string name="logo_of_food_runner">Logo of food runner</string>
    <string name="home_menu">All Restaurants</string>
    <string name="user_profile">Profile</string>
    <string name="favourites_menu">Favourite Restaurants</string>
    <string name="ordered_history_menu">Order History</string>
    <string name="faqs_menu">FAQs</string>
    <string name="logout_menu">Logout</string>
    <string name="drawer_user_photo">Drawer user photo</string>
    <string name="drawer_username">Username</string>
    <string name="drawer_userphone">Userphone</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="faq_fragment">FAQs Fragment</string>
    <string name="favourites_fragment">Favourites Fragments</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="ordered_history_fragment">Ordered History Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="price">price</string>
    <string name="person">/person</string>
    <string name="favourites_image_empty">Favourites image empty</string>
    <string name="_4_5">4.5</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rupee_image">Rupee image</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="profile_address">Address</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_name">Name</string>
    <string name="count">1</string>
    <string name="item_name">menu</string>
    <string name="btn_add">Add</string>
    <string name="rupees">Rs.</string>
    <string name="reupees_cost">200</string>
    <string name="login_password">Password</string>
    <string name="login_mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="name">Name (Min. 3 character)</string>
    <string name="email">Email Address</string>
    <string name="address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="reset_new_password">New Password (Min. 4 characters)</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="submit">Submit</string>
    <string name="register_preferences_file_name">Food Runner Register Preferences</string>
    <string name="no_favourites">No Favourites !</string>
    <string name="confirmation_image">confirmation image</string>
    <string name="remove">Remove</string>
    <string name="id_preferences">Id Preferences</string>
    <string name="place_order">Place Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_17_05_2000">17-05-2000</string>
    <string name="you_are_ordering_from">You are ordering from:</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="sort">sort</string>
    <string name="ok">ok</string>
    <string name="your_order_is_been_successfully_placed">Your order is been successfully placed!</string>
    <string name="q_1_if_i_have_a_question_or_a_problem_what_do_i_do">Q.1 If I have a question or a problem, what do I do?</string>
    <string name="a_1_call_us_or_email_us_we_only_succeed_when_you_do_we_are_here_to_help_and_truly_enjoy_what_we_do_email_us_at_support_foodrunner_com_or_call_us_directly_at_123_456_7890">A.1 Call us or email us! We only succeed when you do! We are here to help and truly enjoy what we do. Email us at support@FoodRunner.com or call us directly at 123-456-7890.</string>
    <string name="q_2_are_there_new_features_coming">Q.2 Are there new features coming?</string>
    <string name="a_2_always_we_continually_update_and_add_new_features_we_will_keep_you_informed_through_our_web_site_and_newsletter_as_new_features_are_available">A.2 Always! We continually update and add new features. We will keep you informed through our web site and newsletter, as new features are available.</string>
    <string name="q_3_can_i_place_order_on_call">Q.3 Can I place order on call?</string>
    <string name="a_3_sorry_we_don_t_accept_orders_on_call_however_you_can_call_us_on_91_9012345678_for_any_help_related_to_placing_order">A.3 Sorry, we don’t accept orders on call. However you can call us on +91-9012345678 for any help related to placing order.</string>
    <string name="q_4_when_i_have_to_pay">Q.4 When I have to pay?</string>
    <string name="a_4_you_will_have_to_pay_at_the_time_of_delivery_as_per_the_payment_details_we_send_to_you_via_email">A.4 You will have to pay at the time of delivery as per the payment details we send to you via email.</string>
    <string name="q_5_can_i_edit_my_order">Q.5 Can I edit my order?</string>
    <string name="a_5_your_order_can_be_edited_before_it_reaches_the_restaurant_you_could_contact_customer_support_team_via_chat_or_call_to_do_so_once_order_is_placed_and_restaurant_starts_preparing_your_food_you_may_not_edit_its_contents">A.5 Your order can be edited before it reaches the restaurant. You could contact customer support team via chat or call to do so. Once order is placed and restaurant starts preparing your food, you may not edit its contents</string>
    <string name="q_6_is_there_a_minimum_order_value">Q.6 Is there a minimum order value?</string>
    <string name="a_6_we_have_no_minimum_order_value_and_you_can_order_for_any_amount">A.6 We have no minimum order value and you can order for any amount.</string>
    <string name="q_7_do_you_charge_for_delivery">Q.7 Do you charge for delivery?</string>
    <string name="a_7_delivery_fee_varies_from_city_to_city_and_is_applicable_if_order_value_is_below_a_certain_amount_additionally_certain_restaurants_might_have_fixed_delivery_fees">A.7 Delivery fee varies from city to city and is applicable if order value is below a certain amount. Additionally, certain restaurants might have fixed delivery fees.</string>
    <string name="q_8_what_are_your_delivery_hours">Q.8 What are your delivery hours?</string>
    <string name="a_8_our_delivery_hours_vary_for_different_locations_and_depends_on_availability_of_supply_from_restaurant_partners">A.8 Our delivery hours vary for different locations and depends on availability of supply from restaurant partners.</string>
    <string name="q_9_did_not_receive_otp">Q.9 Did not receive OTP?</string>
    <string name="a_9_please_check_if_your_app_is_due_for_an_update_and_also_check_your_previous_mails_for_otp_an_otp_is_valid_for_24_hrs_so_only_one_otp_is_sent_in_24hrs_if_not_please_share_the_details_via_support_foodrunner_in">A.9 Please check if your app is due for an update and Also check your previous mails for OTP.An OTP is valid for 24 hrs so only one otp is sent in 24hrs. If not, please share the details via support@FoodRunner.in</string>
    <string name="q_10_is_single_order_from_many_restaurants_possible">Q.10 Is single order from many restaurants possible?</string>
    <string name="a_10_we_currently_do_not_support_this_functionality_however_you_can_place_orders_for_individual_items_from_different_restaurants">A.10 We currently do not support this functionality. However, you can place orders for individual items from different restaurants.</string>
    <string name="menuitem">menuItem</string>
    <string name="rs">Rs.</string>
    <string name="_100">100</string>
</resources>
