<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/logo_of_food_runner"
        android:src="@drawable/foodonway"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etLoginMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="59dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/text_view_background"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="2dp"
        android:hint="@string/login_mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:paddingTop="200dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginMobileNumber"
        android:background="@drawable/text_view_background"
        android:hint="@string/login_password"
        android:padding="10dp"
        android:maxLines="1"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="2dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginPassword"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txtLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/forgot_password"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/donthaveaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/txtLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@+id/donthaveaccount"/>
    </RelativeLayout>



</RelativeLayout>