<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:padding="4dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:weightSum="6"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMenuItemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/count"
                android:textSize="15sp"
                android:textColor="#000000"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3.2"
            android:padding="5dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMenuItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rupees"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/txtMenuItemCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/reupees_cost"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnRemove"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@color/removebutton"
                android:text="@string/remove"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:padding="2dp"
                android:layout_margin="6dp"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_add"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:padding="2dp"
                android:layout_margin="6dp"/>


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

